--- a/index.html
+++ b/index.html
@@ -7,9 +7,8 @@
   <meta name="description" content="">
   <meta name="viewport" content="width=device-width, initial-scale=1">
 
-  <link rel="stylesheet" href="css/highlight.css">
+  <link rel="stylesheet" href="highlight/styles/github.css">
   <script src="js/highlight.pack.js"></script>
-  <script>hljs.initHighlightingOnLoad();</script>
   <style>
   pre.json {
     background-color: #FFFFFF;
